Bug 120188 - In Writer document when a text is highlighted and right click+Character is selected the resulting window is too wide and cannot be resized
Summary: In Writer document when a text is highlighted and right click+Character is se...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.2.1 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-28 20:16 UTC by bostjanv
Modified: 2018-10-27 16:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (1.32 MB, image/png)
2018-10-23 18:02 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bostjanv 2018-09-28 20:16:07 UTC
Description:
Referring to the Summary, one would expect the window to be of "reasonable size" and allow resizing.

Steps to Reproduce:
1. open Writer document (.odt file)
2. select some text (e.g. one word)
3. right click -> Character

Actual Results:
the resulting windows extends over the whole screen, and cannot be resized

Expected Results:
resizable "reasonably sized" window


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 Dieter 2018-09-29 09:46:01 UTC
(In reply to bostjanv from comment #0)
> Actual Results:
> the resulting windows extends over the whole screen, 

I can't confirm this with

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 62cd86977ca41677c56fb2d1f97bb1c5cbdbd416
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-09-20_02:34:32
Locale: en-US (de_DE); Calc: CL


To be certain the reported issue is not related to corruption in the user profile, could you please reset your Libreoffice profile (https://wiki.documentfoundation.org/UserProfile) and re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present.
Comment 2 bostjanv 2018-09-29 12:17:35 UTC
Hello,
Thanks for the quick answer. As noted in the heading of this bug report I based my report on observation of LO version 6.1.2.1. After your comment I repeated the test and the statements in my original report still hold (by the way I did reset the User Profile). This time I am also including a screen shot of the offending window:

https://www.dropbox.com/s/0445086qmb955hu/LibrOffic.PNG?dl=0

Best regards,
bostjanv
Comment 3 Buovjaga 2018-10-23 18:02:40 UTC
Created attachment 145947 [details]
Screenshot
Comment 4 Buovjaga 2018-10-23 18:26:26 UTC
bostjanv: do you have some font with a super long name? I can't think of any other cause (of course it should not do it).
Comment 5 bostjanv 2018-10-25 10:43:55 UTC
Hello Buovjaga,
Thanks for the reply. I checked my font list, and I didn't see any font with an excessively long name. I also checked the Windows fonts list, and the same holds true. I also downloaded LibreOffice 6.2 Alpha1, and checked its behavior with regard to the same problem. I found that there is an interesting difference between LO 6.1 and LO 6.2 alpha1:

LO 6.1

after right clicking on "character" option a window appears with (almost) maximal width. The windows has three columns ("font", "style", and "size") of equal width. When I try to resize the window by moving the cursor to one corner, no arrow (indicating resizing) appears.

LO 6.2 alpha1

after right clicking on "character" option a window appears with (almost) maximal width. The window has three columns ("font", "style", and "size") of which the last two have minimal width while the "font" column occupies the remaining space. Again, no excessively long font name discovered. When I try to resize the window by moving the cursor to one corner, a resizing arrow does appear; but it does not work (i.e., window cannot be resized)

Regards,
bostjanv
Comment 6 Caolán McNamara 2018-10-25 11:04:11 UTC
My guess is the hyperlink page, there are "character styles" listed there, maybe one of those is super wide ?
Comment 7 Caolán McNamara 2018-10-25 11:33:08 UTC
it that is the problem, https://gerrit.libreoffice.org/#/c/62352/ would fix it
Comment 8 bostjanv 2018-10-25 12:32:26 UTC
Hello,
I'm not sure whether I completely understand your comment; but on the basis of your remarks I did the following:

1. open an .odt file;
2. select some text;
3. right click, and select "Styles"; then click on "Edit Style"

After that a near maximal width window appears of the type I described earlier.
When the "v" symbol is clicked on the right side of the "Next style" line a window is expanded with style names. The last style entry is "User Index Heading". After that comes a long Chinese text with some English text interspersed. So this might be the cause of the problem?

Regards,
bostjanv
Comment 9 Commit Notification 2018-10-25 13:28:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e19b342f15178ce9f7d7b832649ee173b4b7f2ea

tdf#120188 limit the width of the styles combos in the url tabpage

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2018-10-25 13:33:13 UTC
Maybe, but the exact issue thing I want checked, is the hyperlink page on the dialog. As in the screenshot there is a "hyperlink" tab, click on that and in that tab there are two comboxes, Visited Links and Unvisited Links. I am guessing that those have super long entries in them too.
Comment 11 bostjanv 2018-10-26 16:05:42 UTC
Hello Caolan,
Thanks for your comment. OK, so I finally understood you, and the "Visited Links" as well as "Unvisited Links" start with a super long Chinese text with interspersed English. That surely must be a bug. I understand your patch is a fix for that bug; but can it be applied to LO 6.1.2.1? And how?
Regards,
bostjanv
Comment 12 bostjanv 2018-10-26 16:09:22 UTC
Sorry. Did not see the "It will be available in 6.2.0" remark.
bostjanv
Comment 13 Buovjaga 2018-10-26 19:21:40 UTC
(In reply to bostjanv from comment #12)
> Sorry. Did not see the "It will be available in 6.2.0" remark.
> bostjanv

Can you confirm the fix with this build: https://dev-builds.libreoffice.org/daily/master/Win-x86_64@42/current/
It installs separately, will not mess with your stable.
Comment 14 bostjanv 2018-10-27 08:35:21 UTC
Bug is gone. Great job!
bostjanv
Comment 15 Commit Notification 2018-10-27 16:10:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b6f1d8460b931950b98b5968ff7734f3c128a4d&h=libreoffice-6-1

tdf#120188 limit the width of the styles combos in the url tabpage

It will be available in 6.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.