tdf#120188 limit the width of the styles combos in the url tabpage

Change-Id: Idcc4043b70c30ccc693c9c5ac983bfabe0573862
Reviewed-on: https://gerrit.libreoffice.org/62352
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>